Update print statement from 'Hello' to 'Goodbye'

--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -50,7 +50,40 @@
               <div class="newsjournal-year">2025</div>
             </div>
 
+<!-- September 2025 -->
+                      <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date month">September</div>
 
+                        <div class="timeline-content">
+                          <p>
+                            A book edited and contributed by AI4S titled <i>PROMISE</i> -
+                            <a
+                              href="https://link.springer.com/book/10.1007/978-3-031-89853-2"
+                              target="_blank"
+                              >PROMoting AI’s Safe usage for Elections</a
+                            >, is released by Springer Nature (
+                            <a
+                              href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-elections"
+                              target="_blank"
+                              >more</a
+                            >).
+                          </p>
+                        </div>
+
+                        <div class="timeline-content">
+                          <p>
+                            A paper on
+                            <i>A Neurosymbolic Fast and Slow Architecture for Graph Coloring</i> is
+                            accepted at
+                            <a href="http://cogsys.org/conference/2025/" target="_blank">ACS 2025</a
+                            >. Preprint at
+                            <a href="https://arxiv.org/abs/2412.01752">arXiv</a>.
+                          </p>
+                        </div>
+                      </div>
+                      <!-- End of September 2025 -->
+                       
             <!-- August 2025 -->
             <div class="timeline-item">
               <div class="timeline-dot"></div>
