--- a/activities/index.html
+++ b/activities/index.html
@@ -94,7 +94,7 @@
                           <div class="activities-content">
                             <p>
                               <span class="activities-content-title">Collaborative Assistants - chatbots - for societal applications</span><br>
-                              <span class="activities-content-event"><a href="https://casy.aiisc.ai/home" target="_blank">Collaborative Assistants for Society (CASY) workshops</a> - Columbia, SC, USA</span><br>
+                              <span class="activities-content-event"><a href="https://sites.google.com/view/casy-series/home" target="_blank">Collaborative Assistants for Society (CASY) workshops</a> - Columbia, SC, USA</span><br>
                               <span class="activities-content-members">Biplav Srivastava</span><br>
                               <span class="activities-content-month">Various</span>                           
                               </p>
