--- a/members/index.html
+++ b/members/index.html
@@ -146,7 +146,8 @@
                         <figcaption style="padding-top: -10%;">
                             <b>Siva Likitha Valluru</b><br><br>
                             <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Homepage</a>,
-                            <a target="_blank" href="mailto:svalluru@email.sc.edu">svalluru@email.sc.edu</a>
+                            <!-- <a target="_blank" href="mailto:svalluru@email.sc.edu">svalluru@email.sc.edu</a> -->
+                            <a target="_blank" href="https://ai4society.github.io/members/likitha">Dissertation (2025)</a>
                             <br><br>
                             Research Interests:
                             <span class="tag tag-method">Recommender Systems</span>,
@@ -347,6 +348,7 @@
 </body>
 
 </html>
+
 
 
 
