--- a/members/index.html
+++ b/members/index.html
@@ -146,7 +146,7 @@
                         <figcaption style="padding-top: -10%;">
                             <b>Siva Likitha Valluru</b><br><br>
                             <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Homepage</a>,
-                            <!-- <a target="_blank" href="mailto:svalluru@email.sc.edu">svalluru@email.sc.edu</a> -->
+                            <a target="_blank" href="mailto:svalluru@email.sc.edu">svalluru@email.sc.edu</a>
                             <a target="_blank" href="https://ai4society.github.io/members/likitha">Dissertation (2025)</a>
                             <br><br>
                             Research Interests:
@@ -182,7 +182,7 @@
                     <h2>Masters Students</h2>
                     <div class="grid">
                         <img src="images_members/nitin.jpg">
-                        <figcaption style="padding-top: -10%;">
+                        <figcaption style="padding-top: -10%;"> 
                             <b>Nitin Gupta</b><br>
                             Graduated: B.S., May 2025. MS (2025-) <br><br>
                             <a target="_blank" href="https://g-nitin.github.io/portfolio/">Homepage</a>,
@@ -230,7 +230,8 @@
                             Graduated: PhD, May 2026. Now at Adobe.<br><br>
                             
                             <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Homepage</a>,
-                            <a target="_blank" href="mailto:svalluru@email.sc.edu">svalluru@email.sc.edu</a>
+                            <a target="_blank" href="https://ai4society.github.io/members/likitha">Dissertation (2025)</a>
+
                             <br>
                             Research Interests:
                             <span class="tag tag-method">Recommender Systems</span>,
@@ -348,6 +349,7 @@
 </body>
 
 </html>
+
 
 
 
