--- a/members/index.html
+++ b/members/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="../stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet_members.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet_members.css"> 
 </head>
 
 <body class="container">
@@ -230,7 +230,7 @@
                             Graduated: PhD, May 2026. Now at Adobe.<br><br>
                             
                             <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Homepage</a>,
-                            <a target="_blank" href="https://ai4society.github.io/members/likitha">Dissertation (2025)</a>
+                            <a target="_blank" href="https://ai4society.github.io/members/likitha">Dissertation - Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains (2025)</a>
 
                             <br>
                             Research Interests:
@@ -349,6 +349,7 @@
 </body>
 
 </html>
+
 
 
 
