--- a/members/index.html
+++ b/members/index.html
@@ -226,10 +226,9 @@
 
                      <img src="images_members/likitha.png">
                         <figcaption style="padding-top: -10%;">
-                            <b>Siva Likitha Valluru</b><br>
+                            <b>href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a></b><br>
                             Graduated: PhD, May 2026. Now at Adobe.<br><br>
                             
-                            <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Homepage</a>,
                             <a target="_blank" href="https://ai4society.github.io/members/likitha">Dissertation - Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains (2025)</a>
 
                             <br>
@@ -349,6 +348,7 @@
 </body>
 
 </html>
+
 
 
 
