--- a/members/index.html
+++ b/members/index.html
@@ -226,7 +226,7 @@
 
                      <img src="images_members/likitha.png">
                         <figcaption style="padding-top: -10%;">
-                            <b>href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a></b><br>
+                            <b><a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a></b><br>
                             Graduated: PhD, May 2026. Now at Adobe.<br><br>
                             
                             <a target="_blank" href="https://ai4society.github.io/members/likitha">Dissertation - Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains (2025)</a>
@@ -348,6 +348,7 @@
 </body>
 
 </html>
+
 
 
 
