--- a/members/index.html
+++ b/members/index.html
@@ -49,9 +49,8 @@
                     <div class="grid">
                         <img src="images_members/biplav.jpg">
                         <figcaption style="padding-top: -10%;">
-                            <b>Dr. Biplav Srivastava</b><br><br>
+                            <b><a target="_blank" href="https://sites.google.com/site/biplavsrivastava">Dr. Biplav Srivastava</a></b><br><br>
                             
-                            <a target="_blank" href="https://sites.google.com/site/biplavsrivastava">Homepage</a>,
                             <a target="_blank" href="mailto:biplav.s@sc.edu">biplav.s@sc.edu</a>
                             <br>
                             Research Interests:
@@ -348,6 +347,7 @@
 </body>
 
 </html>
+
 
 
 
