--- a/activities/index.html
+++ b/activities/index.html
@@ -112,7 +112,7 @@
                           <div class="activities-year">2027</div>
                           <div class="activities-content">
                             <p>
-                              <span class="activities-content-title"><a href="https://www.icaps-conference.org/" target="_blank">International Conference on Automated Planning and Scheduling (ICAPS)</a> - a leading AI conference</span><br>
+                              <span class="activities-content-title">Leading Artificial Intelligence conference in the <a href="https://www.icaps-conference.org/" target="_blank">International Conference on Automated Planning and Scheduling (ICAPS)</a> series.</span><br>
                               <span class="activities-content-event"><a href="https://icaps27.icaps-conference.org/home/" target="_blank">The 37th International Conference on Automated Planning and Scheduling (ICAPS 2027)</a> - Columbia, SC, USA</span><br>
                               <span class="activities-content-members">General Chairs: Biplav Srivastava, Forest Agostinelli; Program Chairs: Stephen F. Smith, Jiaoyang Li, and Shahaf Shperberg</span><br>
                               <span class="activities-content-month">June</span>                           
