--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </td>
                 </tr>
 
-                <!-- MAIN 2-COLUMN ROW: left (About + News), right (photos + posters) -->
+                <!-- MAIN 2-COLUMN ROW: left (About + News), right (photos + spotlight) -->
                 <tr style="padding: 0px">
                   <!-- LEFT COLUMN -->
                   <td
@@ -183,7 +183,7 @@
                     </div>
 
                     <!-- News directly below About -->
-                    <p style="text-align: left; margin-top: 0;">
+                    <p style="text-align: left; margin-top: 0">
                       <heading>News</heading>
                     </p>
 
@@ -208,9 +208,9 @@
                             <i>"Generalized Planning Using Language Models and its Applications"</i>.
                           </p>
                         </div>
-
                       </div>
                       <!-- End of December 2025 -->
+
                       <!-- November 2025 -->
                       <div class="timeline-item">
                         <div class="timeline-dot"></div>
@@ -256,22 +256,20 @@
                         <div class="timeline-content">
                           <p>
                             Biplav gave a keynote talk,
-                            <i
-                              >Extending Transparency Beyond Developers in AI-Driven Decision
-                              Making</i
-                            >, in
+                            <i>Extending Transparency Beyond Developers in AI-Driven Decision Making</i>,
+                            in
                             <a
                               href="https://sites.google.com/view/aaai-atracc/technical-program"
                               target="_blank"
                               >'AI Trustworthiness and Risk Assessment for Challenged Contexts
-                              (ATRACC)</a
+                              (ATRACC)'</a
                             >, and served on a panel discussion on AI safety in
                             <a
                               href="https://www.sei.cmu.edu/events/aaai-fall-symposium-engineering-safety-critical-ai-systems/"
                               target="_blank"
                               >'Engineering Safety-Critical AI Systems</a
                             >
-                            at AAAI 2025 Fall Symposium, on Nov 7,2025.
+                            at AAAI 2025 Fall Symposium, on Nov 7, 2025.
                           </p>
                         </div>
                       </div>
@@ -285,10 +283,8 @@
                         <div class="timeline-content">
                           <p>
                             A paper on
-                            <i
-                              >GAICo: A Deployed and Extensible Framework for Evaluating Diverse and
-                              Multimodal Generative AI Outputs</i
-                            >
+                            <i>GAICo: A Deployed and Extensible Framework for Evaluating Diverse and
+                              Multimodal Generative AI Outputs</i>
                             is accepted at
                             <a
                               href="https://aaai.org/conference/aaai/aaai-26/iaai-26-call/"
@@ -313,7 +309,7 @@
                     "
                   >
                     <!-- Photo slideshow (group photos) -->
-                    <div class="slideshow-container" style="margin-bottom: 18px;">
+                    <div class="slideshow-container" style="margin-bottom: 18px">
                       <div class="mySlides">
                         <img src="images/aix-2025-1.jpg" style="width: 100%" />
                         <div class="caption">AIx - Nov '25</div>
@@ -368,28 +364,62 @@
                       <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
 
-                    <!-- Posters stacked (Research Spotlight) -->
-                    <div class="slideshow-container">
-                      <div class="research-spotlight">
-                        <h3 class="spotlight-title">Research Spotlight</h3>
-                        <a href="spotlight/NeurIPS-24-Poster.png" target="_blank">
-                          <img
-                            src="spotlight/NeurIPS-24-Poster.png"
-                            alt="Research Poster Thumbnail"
-                            class="poster-thumbnail"
-                          />
-                        </a>
+                    <!-- Unified Spotlight Box -->
+                    <div class="spotlight-card" id="spotlightCard">
+                      <div class="spotlight-header">
+                        <div class="spotlight-title">
+                          Spotlight
+                        </div>
+                        <div class="spotlight-subtitle">Highlights from AI4Society</div>
                       </div>
 
-                      <div class="research-spotlight" style="margin-top: 16px;">
-                        <h3 class="spotlight-title">Research Spotlight</h3>
-                        <a href="spotlight/power-IAAI.jpg" target="_blank">
-                          <img
-                            src="spotlight/power-IAAI.jpg"
-                            alt="Research Poster Thumbnail"
-                            class="poster-thumbnail"
-                          />
-                        </a>
+                      <!-- Activity Spotlight -->
+                      <div class="spotlight-section">
+                        <div class="spotlight-section-title">
+                          Activity Spotlight
+                        </div>
+
+                        <div class="spotlight-activity">
+                          AI4Society is organizing <b>ICAPS 2027</b> at
+                          <b>Columbia, South Carolina</b>.
+                        </div>
+                      </div>
+
+                      <div class="spotlight-divider"></div>
+
+                      <!-- Research Spotlight -->
+                      <div class="spotlight-section">
+                        <div class="spotlight-section-title">
+                          Research Spotlight
+                        </div>
+
+                        <div class="spotlight-posters">
+                          <a
+                            class="spotlight-poster"
+                            href="spotlight/NeurIPS-24-Poster.png"
+                            target="_blank"
+                          >
+                            <img
+                              src="spotlight/NeurIPS-24-Poster.png"
+                              alt="NeurIPS Poster"
+                              class="poster-thumbnail"
+                            />
+                            <div class="poster-caption">NeurIPS ’24 Poster</div>
+                          </a>
+
+                          <a
+                            class="spotlight-poster"
+                            href="spotlight/power-IAAI.jpg"
+                            target="_blank"
+                          >
+                            <img
+                              src="spotlight/power-IAAI.jpg"
+                              alt="IAAI Poster"
+                              class="poster-thumbnail"
+                            />
+                            <div class="poster-caption">IAAI Poster</div>
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </td>
@@ -405,8 +435,7 @@
                   <td colspan="2" style="padding-left: 2.5%; width: 100%; vertical-align: middle">
                     <p style="text-align: left">
                       <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp|&nbsp
-                      <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA"
-                        >Address</a
+                      <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA">Address</a
                       >&nbsp|&nbsp
                       <a href="#" id="openGenealogy">Academic Genealogy</a>
                     </p>
@@ -420,102 +449,92 @@
       </tbody>
     </table>
 
-<!-- Academic Genealogy Popover -->
-<div id="genealogyPopup" class="genealogy-popup">
-  <div class="genealogy-header">
-    <h3 class="genealogy-title">
-      <i class="fas fa-project-diagram"></i>
-      Academic Genealogy
-    </h3>
-    <span class="genealogy-close">&times;</span>
-  </div>
+    <!-- Academic Genealogy Popover -->
+    <div id="genealogyPopup" class="genealogy-popup">
+      <div class="genealogy-header">
+        <h3 class="genealogy-title">
+          <i class="fas fa-project-diagram"></i>
+          Academic Genealogy
+        </h3>
+        <span class="genealogy-close">&times;</span>
+      </div>
 
-  <p class="genealogy-subtitle">
-    AI4Society builds on a lineage of pioneering researchers in AI and knowledge representation.
-  </p>
+      <p class="genealogy-subtitle">
+        AI4Society builds on a lineage of pioneering researchers in AI and knowledge representation.
+      </p>
 
-  <div class="genealogy-chain">
-    <!-- Row 1: Minsky -> Charniak -> Hendler -->
-    <div class="genealogy-row">
-      <div class="genealogy-node">
-        <div class="genealogy-node-circle">MM</div>
-        <div class="genealogy-node-name">
-          <a href="https://en.wikipedia.org/wiki/Marvin_Minsky" target="_blank">
-            Minsky
-          </a>
+      <div class="genealogy-chain">
+        <!-- Row 1: Minsky -> Charniak -> Hendler -->
+        <div class="genealogy-row">
+          <div class="genealogy-node">
+            <div class="genealogy-node-circle">MM</div>
+            <div class="genealogy-node-name">
+              <a href="https://en.wikipedia.org/wiki/Marvin_Minsky" target="_blank">Minsky</a>
+            </div>
+            <div class="genealogy-node-role">Advisor</div>
+          </div>
+
+          <div class="genealogy-arrow">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+
+          <div class="genealogy-node">
+            <div class="genealogy-node-circle">EC</div>
+            <div class="genealogy-node-name">
+              <a href="https://en.wikipedia.org/wiki/Eugene_Charniak" target="_blank">Charniak</a>
+            </div>
+            <div class="genealogy-node-role">Advisor</div>
+          </div>
+
+          <div class="genealogy-arrow">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+
+          <div class="genealogy-node">
+            <div class="genealogy-node-circle">JH</div>
+            <div class="genealogy-node-name">
+              <a href="https://en.wikipedia.org/wiki/James_Hendler" target="_blank">Hendler</a>
+            </div>
+            <div class="genealogy-node-role">Advisor</div>
+          </div>
         </div>
-        <div class="genealogy-node-role">Advisor</div>
-      </div>
 
-      <div class="genealogy-arrow">
-        <i class="fas fa-long-arrow-alt-right"></i>
-      </div>
+        <!-- Row 2: Kambhampati -> Srivastava -> AI4Society -->
+        <div class="genealogy-row">
+          <div class="genealogy-node">
+            <div class="genealogy-node-circle">SK</div>
+            <div class="genealogy-node-name">
+              <a href="https://rakaposhi.eas.asu.edu/" target="_blank">Kambhampati</a>
+            </div>
+            <div class="genealogy-node-role">Advisor</div>
+          </div>
 
-      <div class="genealogy-node">
-        <div class="genealogy-node-circle">EC</div>
-        <div class="genealogy-node-name">
-          <a href="https://en.wikipedia.org/wiki/Eugene_Charniak" target="_blank">
-            Charniak
-          </a>
+          <div class="genealogy-arrow">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+
+          <div class="genealogy-node">
+            <div class="genealogy-node-circle">BS</div>
+            <div class="genealogy-node-name">
+              <a href="https://sites.google.com/site/biplavsrivastava/home" target="_blank"
+                >Srivastava</a
+              >
+            </div>
+            <div class="genealogy-node-role">Advisor</div>
+          </div>
+
+          <div class="genealogy-arrow">
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+
+          <div class="genealogy-node">
+            <div class="genealogy-node-circle">AI4S</div>
+            <div class="genealogy-node-name">AI4Society</div>
+            <div class="genealogy-node-role">PhD Students</div>
+          </div>
         </div>
-        <div class="genealogy-node-role">Advisor</div>
-      </div>
-
-      <div class="genealogy-arrow">
-        <i class="fas fa-long-arrow-alt-right"></i>
-      </div>
-
-      <div class="genealogy-node">
-        <div class="genealogy-node-circle">JH</div>
-        <div class="genealogy-node-name">
-          <a href="https://en.wikipedia.org/wiki/James_Hendler" target="_blank">
-            Hendler
-          </a>
-        </div>
-        <div class="genealogy-node-role">Advisor</div>
       </div>
     </div>
-
-    <!-- Row 2: Kambhampati -> Srivastava -> AI4Society -->
-    <div class="genealogy-row">
-      <div class="genealogy-node">
-        <div class="genealogy-node-circle">SK</div>
-        <div class="genealogy-node-name">
-          <a href="https://rakaposhi.eas.asu.edu/" target="_blank">
-            Kambhampati
-          </a>
-        </div>
-        <div class="genealogy-node-role">Advisor</div>
-      </div>
-
-      <div class="genealogy-arrow">
-        <i class="fas fa-long-arrow-alt-right"></i>
-      </div>
-
-      <div class="genealogy-node">
-        <div class="genealogy-node-circle">BS</div>
-        <div class="genealogy-node-name">
-          <a href="https://sites.google.com/site/biplavsrivastava/home" target="_blank">
-            Srivastava
-          </a>
-        </div>
-        <div class="genealogy-node-role">Advisor</div>
-      </div>
-
-      <div class="genealogy-arrow">
-        <i class="fas fa-long-arrow-alt-right"></i>
-      </div>
-
-      <div class="genealogy-node">
-        <div class="genealogy-node-circle">AI4S</div>
-        <div class="genealogy-node-name">
-          AI4Society
-        </div>
-        <div class="genealogy-node-role">PhD Students</div>
-      </div>
-    </div>
-  </div>
-</div>
 
     <script>
       // Image Slideshow Variables
@@ -525,8 +544,7 @@
 
       // Research Spotlight Slideshow Variables (kept but unused)
       var spotlightIndex = 0;
-      var spotlightSlides =
-        document.getElementsByClassName("research-spotlight-slide");
+      var spotlightSlides = document.getElementsByClassName("research-spotlight-slide");
       var spotlightTimer;
 
       // Image Slideshow Functions
