Update ICAPS 2027 link in spotlight activity

--- a/index.html
+++ b/index.html
@@ -380,8 +380,7 @@
                         </div>
 
                         <div class="spotlight-activity">
-                          AI4Society is organizing <b>ICAPS 2027</b> at
-                          <b>Columbia, South Carolina</b>.
+                          AI4Society is organizing <a href="https://icaps27.icaps-conference.org/home/" target="_blank"> <b>ICAPS 2027</b></a>at <b>Columbia, South Carolina</b>.
                         </div>
                       </div>
 
