Add AIx event details on spotlight
Added information about the AIx event focused on senior citizens.

--- a/index.html
+++ b/index.html
@@ -382,6 +382,16 @@
                         <div class="spotlight-activity">
                           AI4Society is organizing <a href="https://icaps27.icaps-conference.org/home/" target="_blank"> <b>ICAPS 2027</b></a>at <b>Columbia, South Carolina</b>.
                         </div>
+
+                        <div class="spotlight-activity">
+                            We organized a highly successful, day-long, free community outreach event focused on the role
+                            of AI in keeping senior citizens safe and independent event called
+                            <b><a
+                                href="https://sites.google.com/cse.sc.edu/safe-ai-for-seniors"
+                                target="_blank"
+                                >AIx: Safe AI for Seniors</a></b>, on Nov 14, 2025. 
+                         </div>
+
                       </div>
 
                       <div class="spotlight-divider"></div>
