Fix typo in event description in index.html

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
                         <div class="spotlight-activity">
                             We organized a highly successful, day-long, free community outreach event focused on the role
-                            of AI in keeping senior citizens safe and independent event called
+                            of AI in keeping senior citizens safe and independent called
                             <b><a
                                 href="https://sites.google.com/cse.sc.edu/safe-ai-for-seniors"
                                 target="_blank"
