Update event and poster descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         </div>
 
                         <div class="spotlight-activity">
-                          AI4Society is organizing <a href="https://icaps27.icaps-conference.org/home/" target="_blank"> <b>ICAPS 2027</b></a>at <b>Columbia, South Carolina</b>.
+                          AI4Society is organizing <a href="https://icaps27.icaps-conference.org/home/" target="_blank"> <b>ICAPS 2027</b></a> at <b>Columbia, South Carolina</b>.
                         </div>
 
                         <div class="spotlight-activity">
@@ -413,7 +413,7 @@
                               alt="NeurIPS Poster"
                               class="poster-thumbnail"
                             />
-                            <div class="poster-caption">NeurIPS ’24 Poster</div>
+                            <div class="poster-caption">NeurIPS 2024 Poster</div>
                           </a>
 
                           <a
@@ -426,7 +426,7 @@
                               alt="IAAI Poster"
                               class="poster-thumbnail"
                             />
-                            <div class="poster-caption">IAAI Poster</div>
+                            <div class="poster-caption">IAAI/AAAI 2023 Poster</div>
                           </a>
                         </div>
                       </div>
