added dissertation website

--- a/members/index.html
+++ b/members/index.html
@@ -115,6 +115,7 @@
                             <b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a></b><br><br>
 
                             <a target="_blank" href="mailto:vishalp@mailbox.sc.edu">vishalp@mailbox.sc.edu</a>
+                            <a target="_blank" href="https://vishalpallagani.github.io/phd/">Dissertation - Generalized Planning Using Language Models ...</a>
                             <br>
                             Research Interests:
                             <span class="tag tag-method">Automated Planning</span>,
@@ -342,6 +343,7 @@
 </body>
 
 </html>
+
 
 
 
