Fix HTML formatting and restore content

--- a/members/index.html
+++ b/members/index.html
@@ -114,7 +114,7 @@
                         <figcaption style="padding-top: -10%;">
                             <b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a></b><br><br>
 
-                            <a target="_blank" href="mailto:vishalp@mailbox.sc.edu">vishalp@mailbox.sc.edu</a>
+                            <a target="_blank" href="mailto:vishalp@mailbox.sc.edu">vishalp@mailbox.sc.edu</a><br>
                             <a target="_blank" href="https://vishalpallagani.github.io/phd/">Dissertation - Generalized Planning Using Language Models ...</a>
                             <br>
                             Research Interests:
@@ -343,6 +343,7 @@
 </body>
 
 </html>
+
 
 
 
