--- a/projects/ontology/index.html
+++ b/projects/ontology/index.html
@@ -53,8 +53,17 @@
 
           <p style="margin-top: 20px;"><em><b>Representative Publications</b></em></p>
           <ul>
+              <li>
+              Building a Planning Ontology to Represent and Exploit Planning Knowledge and Its Applications<br>
+              Bharath Chandra Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael N. Huhns & Vignesh Narayanan <br>
+              <em>Discovery Data Journal, 3, 55 (2025). https://doi.org/10.1007/s44248-025-00093-9</em><br>
+              <a href="https://link.springer.com/article/10.1007/s44248-025-00093-9" target="_blank">[Paper]</a>
+              <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
+            </li>
+            
             <li>
               Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications<br>
+                            Bharath Chandra Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael N. Huhns & Vignesh Narayanan <br>
               <em>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India, 2024.</em><br>
               <a href="./files/CODS_24_AI_Planning_Ontology.pdf" target="_blank">[Paper]</a>
               <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
