--- a/publications/index.html
+++ b/publications/index.html
@@ -245,8 +245,7 @@
                             <li><b>Building a Planning Ontology to Represent and Exploit Planning Knowledge and Its
                                     Applications</b>
                                 </i><br>
-                                <i>Eighth International Conference on Data Science and Management of Data (CODS-COMAD
-                                    '24), India, 2024.</i><br>
+                                <i> Discov Data 3, 55 (2025)</i><br>
                                 Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju,
                                 Michael N. Huhns and Vignesh Narayanan
                                 <br>
@@ -986,5 +985,6 @@
 </body>
 
 </html>
+
 
 
