update Planning Ontology

--- a/projects/ontology/index.html
+++ b/projects/ontology/index.html
@@ -60,6 +60,29 @@
             action ordering constraints extracted from the ontology.
           </p>
 
+          <div
+            style="border: 1px solid #eee; border-left: 5px solid var(--primary-color); background-color: #fff; padding: 15px; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); margin-top: 20px;">
+            <h4 style="font-size: 16px; margin-top: 0; color: var(--primary-color);">Planning Ontology Tool</h4>
+            <div style="display: flex; flex-wrap: wrap; gap: 20px; align-items: flex-start;">
+              <div style="flex: 1; min-width: 280px;">
+                <p style="margin-top: 0;">
+                  Available on <a href="https://editor.planning.domains" target="_blank">Planning.Domains</a>, this
+                  interactive tool transforms PDDL (domain, problem, plans) into RDF/OWL knowledge graphs. It features
+                  D3.js-based visualization and SPARQL querying capabilities to explore planning metadata.
+                </p>
+                <p style="margin-top: 10px; margin-bottom: 0;">
+                  <b>Resources:</b>
+                  <a href="https://purl.archive.org/ai4s/ontology/planning" target="_blank">[PURL]</a>
+                  <a href="https://github.com/ai4society/planning-ontology-tool" target="_blank">[Plugin Repository]</a>
+                </p>
+              </div>
+              <div style="flex: 1; min-width: 280px; text-align: center;">
+                <img src="./images/po-tool.gif" alt="Planning Ontology Tool Demo"
+                  style="max-width: 100%; border: 1px solid #ccc; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+              </div>
+            </div>
+          </div>
+
           <p style="margin-top: 20px;"><em><b>Representative Publications</b></em></p>
           <ul>
             <li>
@@ -89,6 +112,9 @@
               <em>Biplav Srivastava, Vishal Pallagani, Bharath Muppasani</em> <br>
             </li>
           </ul>
+
+
+
 
           <img src="./images/planning_ontology.png" alt="Planning Ontology Diagram"
             style="max-width: 90%; display: block; margin: 30px auto; border-radius: 5px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
@@ -128,6 +154,7 @@
               <a href='../publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf' target="_blank">[Paper]</a>
               <a href='https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view'
                 target="_blank">[Video]</a>
+              <a href='./files/omega_poster_AAAI-2026.pdf' target="_blank">[Poster]</a>
               <br>
             </li>
 
